# dcadec

./: Makefile  Makefile.am  configure.ac  dcadec.pc.in
